--- a/thanks.html
+++ b/thanks.html
@@ -1,5 +1,23 @@
+<!doctype html>
 <html>
-    <head>
-        <script type="text/javascript">window.location.replace('chrome-extension://klbibkeccnjlkjkiokjodocebajanakg/thanks.html')</script>
-    </head>
+<head>
+    <link type="text/css" href="css/style.css" rel="stylesheet">
+    <title>The Great Suspender - Thanks!</title>
+</head>
+<body>
+
+<div class="splash">
+
+    <div class="dude-left">
+        <img src="img/dude_large.png" />
+    </div>
+
+    <h1>
+        <span>Yay donations!</span>
+    </h1>
+    <h2>Congratulations on being such a wonderful person.</h2>
+    <hr class="splashRule" />
+</div>
+
+</body>
 </html>
