--- a/thanks.html
+++ b/thanks.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <link type="text/css" href="css/style.css" rel="stylesheet">
-    <title>The Great Suspender - Thanks!</title>
+    <!-- <script type="text/javascript" src="js/thanks.js"></script> -->
+    <title id="gsTitle" data-i18n="__MSG_ext_extension_name__ - __MSG_html_thanks_title__">Great Suspender - Thanks</title>
 </head>
-<body>
+<body id="body">
 
 <div class="splash">
 
@@ -13,9 +14,9 @@
     </div>
 
     <h1>
-        <span>Yay donations!</span>
+        <span data-i18n="__MSG_html_thanks_header__"></span>
     </h1>
-    <h2>Congratulations on being such a wonderful person.</h2>
+    <h2 data-i18n="__MSG_html_thanks_sub_header__"></h2>
     <hr class="splashRule" />
 </div>
 
