--- a/thanks.html
+++ b/thanks.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <link type="text/css" href="css/style.css" rel="stylesheet">
-    <!-- <script type="text/javascript" src="js/thanks.js"></script> -->
-    <title id="gsTitle" data-i18n="__MSG_ext_extension_name__ - __MSG_html_thanks_title__">Great Suspender - Thanks</title>
+    <title id="gsTitle">Great Suspender - Thanks</title>
 </head>
 <body id="body">
 
@@ -14,9 +13,9 @@
     </div>
 
     <h1>
-        <span data-i18n="__MSG_html_thanks_header__"></span>
+        <span></span>
     </h1>
-    <h2 data-i18n="__MSG_html_thanks_sub_header__"></h2>
+    <h2></h2>
     <hr class="splashRule" />
 </div>
 
