--- a/thanks.html
+++ b/thanks.html
@@ -13,7 +13,7 @@
     </div>
 
     <h1>
-        <span></span>
+        <span>Great thanks!</span>
     </h1>
     <h2></h2>
     <hr class="splashRule" />
