--- a/tos.html
+++ b/tos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link type="text/css" href="css/style.css" rel="stylesheet">
-    <title id="gsTitle">Great Suspender - Thanks</title>
+    <title id="gsTitle">Great Suspender - Terms of Service</title>
 </head>
 <body id="body">
     
