--- a/tos.html
+++ b/tos.html
@@ -8,7 +8,7 @@
     
   <div class="splash">
 
-      <h2>Terms of Use</h2>
+      <h2>Terms of Service</h2>
 
       <p class="small"><strong>Important:</strong> Before using this software (The Great Suspender), please carefully read this agreement which contains the terms and conditions under which you are acquiring a license to use The Great Suspender. If you do not accept the terms and conditions of this agreement please do not use The Great Suspender. If you access or use The Great Suspender, you will be accepting the terms and conditions of this agreement and The Great Suspender’s <a href="/privacy">Privacy Policy</a>. The Great Suspender is protected by copyright laws and international copyright treaties, as well as other intellectual property laws.</p>
       <p class="small">If you are an agent or employee of another entity you represent and warrant that (i) the individual accepting this agreement is duly authorized to accept this agreement on such entity’s behalf and to bind such entity, and (ii) such entity has full power, corporate or otherwise, to enter into this agreement and perform its obligations hereunder.</p>
