--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,44 @@
-todo
+<!doctype html>
+<html>
+<head>
+    <link type="text/css" href="css/style.css" rel="stylesheet">
+    <title id="gsTitle">Great Suspender - Terms of Service</title>
+</head>
+<body id="body">
+    
+  <div class="legal">
+
+    <h2>Privacy Policy</h2>
+
+    <p>
+      This notice describes the Privacy Policy that applies to all information collected or submitted when you install or use The Great Suspender extension. The Great Suspender extension is owned and operated by Dean Oemcke - a programmer from New Zealand (referred to herein as  "we," "us," or "our," : ).
+    </p>
+
+    <h4>USER ACCOUNTS</h4>
+    <p>
+      You are not required to create a user account or provide any personal information in order to use The Great Suspender.
+    </p>
+
+    <h4>COLLECTION OF INFORMATION</h4>
+    <p>
+      The Great Suspender locally on your PC collects tab titles and URLs, and optionally screen captures in order to do what it is supposed to do. All this information is stored only locally, on your computer.
+    </p>
+
+    <p>
+      The Great Suspender uses Google Analytics to anonymously collect aggregated usage information, like usage of different features of The Great Suspender, performance metrics, how often users open its window and so on. All of this information collected in a way that excludes the possibility to associate by us this usage statistics with a concrete user, and in a full accordance of the Google Analytics respective policies. We use this non-identifying, aggregated information to analyze general trends and manner in which The Great Suspender is used, to monitor performance and improve the product, or to develop new products and services.
+    </p>
+
+    <h4>SHARING OF INFORMATION</h4>
+    <p>
+      We do not collect any personal information. We do not share any personally identifiable information.
+    </p>
+
+    <h4>CONTACT</h4>
+    <p>
+      If you have questions or concerns regarding this Privacy Policy, you can contact us by creating a new issue on the gitHub project page: <a href="https://github.com/deanoemcke/thegreatsuspender/issues">https://github.com/deanoemcke/thegreatsuspender/issues</a>
+    </p>
+    
+    <p class="last-updated">Last updated August 09, 2018.</p>
+  </div>
+</body>
+</html>
