--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link type="text/css" href="css/style.css" rel="stylesheet">
-    <title id="gsTitle">Great Suspender - Terms of Service</title>
+    <title id="gsTitle">Great Suspender - Privacy Policy</title>
 </head>
 <body id="body">
     
