--- a/thanks.html
+++ b/thanks.html
@@ -6,18 +6,19 @@
 </head>
 <body id="body">
 
-<div class="splash">
+  <div class="splash">
 
-    <div class="dude-left">
-        <img src="img/dude_large.png" />
+    <img class="suspendy-guy" src="img/suspendy-guy.png" />
+
+    <div>
+      <h1>Thanks for your support!</h1>
+      <h3>May great things come your way today.</h3>
+
+      <div class="dude-text-base"></div>
+
     </div>
 
-    <h1>
-        <span>Great thanks!</span>
-    </h1>
-    <h2></h2>
-    <hr class="splashRule" />
-</div>
+  </div>
 
 </body>
 </html>
