--- a/privacy.html
+++ b/privacy.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link type="text/css" href="css/style.css" rel="stylesheet">
+    <link type="text/css" href="css/legal.css" rel="stylesheet">
     <title id="gsTitle">Great Suspender - Privacy Policy</title>
 </head>
 <body id="body">
