--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
     <link type="text/css" href="css/style.css" rel="stylesheet">
     <title id="gsTitle">Great Suspender - Thanks</title>
 </head>
-<body id="body">
+<body class="splash-wrap">
 
   <div class="splash">
 
