--- a/privacy.html
+++ b/privacy.html
@@ -36,7 +36,7 @@
 
     <h4>CONTACT</h4>
     <p>
-      If you have questions or concerns regarding this Privacy Policy, you can contact us by creating a new issue on the gitHub project page: <a href="https://github.com/deanoemcke/thegreatsuspender/issues">https://github.com/deanoemcke/thegreatsuspender/issues</a>
+      If you have questions or concerns regarding this Privacy Policy, you can contact us by email at <a href="mailto:greatsuspender.privacy@gmail.com">greatsuspender@gmail.com</a>
     </p>
     
     <p class="last-updated">Last updated August 09, 2018.</p>
