--- a/tos.html
+++ b/tos.html
@@ -16,7 +16,7 @@
 
       <h4 id="1-definitions">1. Definitions</h4>
       <p>(i) &quot;User&quot; or &quot;You&quot; means the individual or the business entity to which a license is granted by The Great Suspender for the use of the Software;</p>
-      <p>(ii) &quot;Effective Date&quot; means the date on which a User first installs the Licensed Software through The Great Suspender’s gitHub project page or through a third-party application, extension, or add-on store such as the Chrome Web Store or Firefox Add-ons website;</p>
+          <p>(ii) &quot;Effective Date&quot; means the date on which a User first installs the Licensed Software through The Great Suspender’s gitHub project page or through a third-party application, extension, or add-on store such as the Chrome Web Store or Firefox Add-ons website;</p>
       <p>(iii) “Licensed Software” means the web based software extension called The Great Suspender, which is proprietary to The Great Suspender;</p>
       <p>(iv) “Licensee Data” means all electronic data or information submitted by User to the Service;</p>
       <p>(v) “Service” means the provision of access to the Licensed Software for the purpose of transmitting Licensee Data;</p>
@@ -63,7 +63,7 @@
       This Agreement shall be governed by the laws of the Province of British Columbia. No choice of laws rules of any jurisdiction shall apply to this Agreement. The User consents and agrees that the courts of the Province of British Columbia shall have jurisdiction over any legal action or proceeding brought by the User arising out of or relating to this Agreement, and the User consents to the jurisdiction of such courts for any such action or proceeding.</p>
       <p><strong>9.5 Entire Agreement</strong><br>
       This Agreement is the entire understanding and agreement between the User and The Great Suspender with respect to the subject matter hereof, and it supersedes all prior negotiations, commitments and understandings, verbal or written, any purchase order issued by User.</p>
-      <p>If you have any questions about this agreement, please raise an issue on the gitHub project page: <a href="https://github.com/deanoemcke/thegreatsuspender/issues">https://github.com/deanoemcke/thegreatsuspender/issues</a>.</p>
+      <p>If you have any questions about this agreement, please contact us via email at <a href="mailto:greatsuspender.tod@gmail.com">greatsuspender@gmail.com</a>.</p>
 
       <p class="last-updated">Last updated August 08, 2018.</p>
   </div>
