--- a/tos.html
+++ b/tos.html
@@ -63,7 +63,7 @@
       This Agreement shall be governed by the laws of the Province of British Columbia. No choice of laws rules of any jurisdiction shall apply to this Agreement. The User consents and agrees that the courts of the Province of British Columbia shall have jurisdiction over any legal action or proceeding brought by the User arising out of or relating to this Agreement, and the User consents to the jurisdiction of such courts for any such action or proceeding.</p>
       <p><strong>9.5 Entire Agreement</strong><br>
       This Agreement is the entire understanding and agreement between the User and The Great Suspender with respect to the subject matter hereof, and it supersedes all prior negotiations, commitments and understandings, verbal or written, any purchase order issued by User.</p>
-      <p>If you have any questions about this agreement, please contact us via email at <a href="mailto:greatsuspender.tod@gmail.com">greatsuspender@gmail.com</a>.</p>
+      <p>If you have any questions about this agreement, please contact us via email at <a href="mailto:greatsuspender.tos@gmail.com">greatsuspender@gmail.com</a>.</p>
 
       <p class="last-updated">Last updated August 08, 2018.</p>
   </div>
