--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
     </p>
 
     <p>
-      The Great Suspender uses Google Analytics to anonymously collect aggregated usage information, like usage of different features of The Great Suspender, performance metrics, how often users open its window and so on. All of this information collected in a way that excludes the possibility to associate by us this usage statistics with a concrete user, and in a full accordance of the Google Analytics respective policies. We use this non-identifying, aggregated information to analyze general trends and manner in which The Great Suspender is used, to monitor performance and improve the product, or to develop new products and services.
+      The Great Suspender uses Google Analytics to anonymously collect aggregated usage information, like usage of different features of The Great Suspender, performance metrics, and code exceptions. All of this information collected in a way that excludes the possibility to associate by us this usage statistics with a concrete user, and in a full accordance of the Google Analytics respective policies. We use this non-identifying, aggregated information to analyze general trends and manner in which The Great Suspender is used, to monitor performance and improve the product, or to develop new products and services.
     </p>
 
     <h4>SHARING OF INFORMATION</h4>
@@ -39,7 +39,7 @@
       If you have questions or concerns regarding this Privacy Policy, you can contact us by email at <a href="mailto:greatsuspender.privacy@gmail.com">greatsuspender@gmail.com</a>
     </p>
     
-    <p class="last-updated">Last updated August 09, 2018.</p>
+    <p class="last-updated">Last updated August 20, 2018.</p>
   </div>
 </body>
 </html>
